Refactor: 회원 기능에 로그인 한 유저 ID 사용하도록 변경(#20)
