# src/routes/user.route.js
@@ -9,9 +9,9 @@ userRouter.post('/signup/creator', registerCreator);
 userRouter.post('/signup/general', registerGeneral);
 userRouter.post('/find-username', findUsername);
 userRouter.get('/verify-email', verifyEmail); // 회원가입시 이메일 인증
-userRouter.get('/:userId/orders', jwtMiddleware, getOrderItems);
-userRouter.patch('/:userId', jwtMiddleware, updateUser); // pw 를 제외한 유저정보 수정
-userRouter.patch('/:userId/change-password', jwtMiddleware, updatePassword); // pw 수정
-userRouter.post('/:userId/change-password-email', jwtMiddleware, updatePasswordEmail); // pw 수정을 위한 이메일
+userRouter.get('/orders', jwtMiddleware, getOrderItems);
+userRouter.patch('', jwtMiddleware, updateUser); // pw 를 제외한 유저정보 수정
+userRouter.patch('/change-password', jwtMiddleware, updatePassword); // pw 수정
+userRouter.post('/change-password-email', jwtMiddleware, updatePasswordEmail); // pw 수정을 위한 이메일
 userRouter.post("/find-password", jwtMiddleware, asyncHandler(findPassword));
-userRouter.patch("/:userId/status", jwtMiddleware, asyncHandler(removeUser));
+userRouter.patch("/status", jwtMiddleware, asyncHandler(removeUser));
